add 3 bars menu

--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -8,7 +8,9 @@
         <header>
             <!-- Logo link and sidebar button-->
             <div class="flex">
-                <div class="btn-3bar"><img src="static/mail/media/3bars_menu.svg" alt=""></div>
+                <div class="btn-3bar">
+                    <img src="" alt="">
+                </div>
                 <div class="logo-link">
                     <img src="static/mail/media/X logo.svg" alt="">
                     <img src="static/mail/media/Mailer.svg" alt="">
