--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -115,3 +115,10 @@ main{
 
     display: flex;
 }
+
+.checkbox-btn {
+    margin-left: 1.31em;
+    border: solid 2px #C5C5C5;
+
+    background: transparent;
+}
