--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -8,7 +8,7 @@
         <header>
             <!-- Logo link and sidebar button-->
             <div class="logos flex">
-                <div class="btn-3bar" role="button">
+                <div class="btn-3bar" role="button" aria-pressed="false" tabindex="0">
                     <img src="static/mail/media/3bars menu.svg" alt="">
                 </div>
                 <div class="logo-link">
@@ -16,6 +16,9 @@
                     <img src="static/mail/media/Mailer.svg" alt="">
                 </div>
             </div>
+            <script>
+                    
+            </script>
 
             <!-- Email search bar-->
             <div class="search-bar">
@@ -24,7 +27,7 @@
                 </form>
 
             </div>
-
+            
             <!-- Cuurent user email -->
             <div class="current-user flex">
                 <h4>{{ request.user.email }}</h4>
@@ -44,10 +47,25 @@
             <!-- Nav button container -->
             <div class="nav-container">
                 <ul>
-                    <li><button name="mailbox" class="nav-button " id="inbox">Inbox</button></li>
-                    <li><button class="nav-button" id="compose">Compose</button></li>
-                    <li><button name="mailbox" class="nav-button" id="sent">Sent</button></li>
-                    <li><button name="mailbox" class="nav-button" id="archived">Archived</button></li>
+                    <li><button name="mailbox" class="nav-button " id="inbox">
+                        <img src="" alt="">Inbox
+                    </button></li>
+                    <li><button name="mailbox" class="nav-button" id="sent">
+                        <img src="" alt="">Sent
+                    </button></li>
+                    <li><button name="mailbox" class="nav-button" id="archived">
+                        <img src="" alt="">Archived
+                    </button></li>
+                    <li><button class="nav-button" id="flaged">
+                        <img src="" alt="">Flaged
+                    </button></li>
+                    <li><button class="nav-button" id="spam">
+                        <img src="" alt="">Spam
+                    </button></li>
+                    <li><button class="nav-button" id="Trash">
+                        <img src="" alt="">Trash
+                    </button></li>
+
                     <li><a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a></li>
         
                 </ul>
