--- a/mail/mail/templates/mail/inbox.html
+++ b/mail/mail/templates/mail/inbox.html
@@ -16,15 +16,6 @@
                     <img src="static/mail/media/Mailer.svg" alt="">
                 </div>
             </div>
-            
-            <script>
-                wrapper.addEventListener("keydown", e => {
-                    if (e.key === " " || e.key === "Enter" || e.key === "Spacebar") {
-                        toggleBtn(e.target);
-                    }
-                }); 
-            </script>
-
             <!-- Email search bar-->
             <div class="search-bar">
                 <form action="">
@@ -61,13 +52,13 @@
                     <li><button name="mailbox" class="nav-button" id="archived">
                         <img src="" alt="">Archived
                     </button></li>
-                    <li><button class="nav-button" id="flaged">
+                    <li><button name="mailbox" class="nav-button" id="flaged">
                         <img src="" alt="">Flaged
                     </button></li>
-                    <li><button class="nav-button" id="spam">
+                    <li><button name="mailbox" class="nav-button" id="spam">
                         <img src="" alt="">Spam
                     </button></li>
-                    <li><button class="nav-button" id="Trash">
+                    <li><button name="mailbox" class="nav-button" id="Trash">
                         <img src="" alt="">Trash
                     </button></li>
 
