--- a/network/project4/network/templates/network/layout.html
+++ b/network/project4/network/templates/network/layout.html
@@ -2,48 +2,91 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>{% block title %}Social Network{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link href="{% static 'network/styles.css' %}" rel="stylesheet">
-    </head>
-    <body>
+	<head>
+		<title>{% block title %}Social Network{% endblock %}</title>
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+			integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+			crossorigin="anonymous"
+		/>
+		<link href="{% static 'network/styles.css' %}" rel="stylesheet" />
+	</head>
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<a class="navbar-brand" href="#">Network</a>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Network</a>
-          
-            <div>
-              <ul class="navbar-nav mr-auto">
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><strong>{{ user.username }}</strong></a>
-                    </li>
-                {% endif %}
-                <li class="nav-item">
-                  <a class="nav-link" href="{% url 'index' %}">All Posts</a>
-                </li>
-                {% if user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Following</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}">Log In</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'register' %}">Register</a>
-                    </li>
-                {% endif %}
-              </ul>
-            </div>
-          </nav>
-        
-        <div class="body">
-            {% block body %}
-            {% endblock %}
-        </div>
-    </body>
+			<div>
+				<ul class="navbar-nav mr-auto">
+					{% if user.is_authenticated %}
+					<li class="nav-item">
+						<a class="nav-link" href="#"
+							><strong>{{ user.username }}</strong></a
+						>
+					</li>
+					{% endif %}
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'index' %}">All Posts</a>
+					</li>
+					{% if user.is_authenticated %}
+					<li class="nav-item">
+						<a class="nav-link" href="#">Following</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+					</li>
+					{% else %}
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'login' %}">Log In</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="{% url 'register' %}">Register</a>
+					</li>
+					{% endif %}
+				</ul>
+			</div>
+		</nav>
+
+		<div class="body">{% block body %} {% endblock %}</div>
+		<script>
+			document.addEventListener("DOMContentLoaded", function () {
+				document
+					.querySelector("#post-test")
+					.addEventListener("click", function () {
+						console.log("loadPost function is called");
+						fetch("/feed/")
+							.then((response) => response.json())
+							.then((listposts) => {
+								console.log(listposts);
+
+								if (typeof listposts !== "object") {
+									console.error("Response is not an object");
+									return;
+								}
+
+								let feed = "";
+								const postArray = listposts[1];
+								console.log(postArray);
+								for (let i = 0; i < Object.keys(postArray).length; i++) {
+									post = postArray[i];
+									console.log(`Post: ${post.id}`);
+									let eachpost = `<li>
+													<div>
+													<h6>${post.user}</h6>
+													<p>${post.text}</p>
+													<div>${post.media}</div>
+													<span>${post.timestamp}</span>
+													</div>
+												</li>`;
+									feed += eachpost;
+								}
+								const root = document.querySelector("#root");
+								const postList = document.createElement("div");
+								postList.innerHTML = `<ul>${feed}</ul>`;
+								root.appendChild(postList);
+							});
+					});
+			});
+		</script>
+	</body>
 </html>
