--- a/network/frontend/network/src/myIcons.css
+++ b/network/frontend/network/src/myIcons.css
@@ -1,4 +1,8 @@
 .icons {
-	margin-left: 3.75em !important;
-	margin-right: 1.25em !important;
+	margin-right: 1.25em;
+}
+
+.cube-logo {
+	margin-top: 1em;
+	margin-left: 3.75em;
 }
