--- a/network/frontend/network/src/timeLine.css
+++ b/network/frontend/network/src/timeLine.css
@@ -13,7 +13,20 @@
 
 .TL-preference {
 	height: 2.88em;
+	border-bottom: 1px solid #d9d9d9;
 }
 
 .for-you {
+}
+
+.fleets-container {
+	height: 100px;
+	display: flex;
+	gap: 1em;
+	align-items: center;
+}
+
+.fleets-container > .fleet {
+	display: inline-block;
+	vertical-align: middle;
 }
