--- a/network/frontend/network/src/timeLine.css
+++ b/network/frontend/network/src/timeLine.css
@@ -20,13 +20,30 @@
 }
 
 .fleets-container {
-	height: 100px;
+	height: 6.25em;
 	display: flex;
-	gap: 1em;
 	align-items: center;
+	border-bottom: 1px solid #d9d9d9;
 }
 
 .fleets-container > .fleet {
-	display: inline-block;
-	vertical-align: middle;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	height: 3.75em;
+	width: 3.75em;
+	margin: 1.25em 0.45em;
+
+	border: 1.5px solid;
+	border-radius: 50%;
+	background: none;
+}
+
+.fleet > .avatar-container .avatar-img {
+	height: 3.6875em;
+	width: 3.6875em;
+	margin: 0.125em;
+	border-radius: 6.25em;
+	object-fit: cover;
 }
