--- a/network/frontend/network/src/TLElements.css
+++ b/network/frontend/network/src/TLElements.css
@@ -56,3 +56,22 @@
 	font-size: 0.82em;
 	line-height: 1em;
 }
+
+#text-input {
+	resize: none;
+	overflow: hidden;
+
+	width: 95%;
+	margin-top: 1.41em;
+	margin-right: 1.26em;
+
+	border: none;
+
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 500;
+	font-size: 1.145rem;
+	line-height: 1.375rem;
+
+	color: #a6a5a5;
+}
