--- a/network/frontend/network/src/App.css
+++ b/network/frontend/network/src/App.css
@@ -1,19 +1,20 @@
 .App-container {
 	height: 100vh;
 	display: grid;
-	grid-template-columns: 2.5fr 6fr 3.5fr;
+	grid-template-columns: 2.8fr 5.3fr 3.9fr;
 }
 
 .bottom-signal {
 	display: flex;
 	position: fixed;
+	background: blue;
 
 	width: 100vw;
 	height: 4.5em;
 	bottom: 0;
 }
 
-.invite-signal > h4 {
+.invite-signal > h6 {
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 700;
