--- a/network/frontend/network/src/TLElements.css
+++ b/network/frontend/network/src/TLElements.css
@@ -1,7 +1,7 @@
 .status-container {
 	display: flex;
 	min-height: 7.06em;
-	border-bottom: 1px solid #d9d9d9;
+	border-bottom: 1px solid #f3f2f2;
 }
 
 .user-status {
