--- a/network/frontend/network/src/modals.css
+++ b/network/frontend/network/src/modals.css
@@ -1,8 +1,8 @@
 .modal {
-	display: none;
+	display: flex;
+	align-items: center;
 	position: fixed; /* Stay in place */
 	z-index: 1; /* Sit on top */
-	padding-top: 100px; /* Location of the box */
 	left: 0;
 	top: 0;
 	width: 100%; /* Full width */
@@ -12,19 +12,16 @@
 	background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
-.login-modal {
-	display: block;
-}
-.signup-modal {
+.open {
 	display: block;
 }
 
 .modal-content {
 	position: relative;
+	top: 0;
 	width: 37.5em;
 	height: 35.19em;
 	margin: auto;
-	padding: 0;
 	border-radius: 0.94em;
 	background: #fff;
 }
@@ -38,14 +35,12 @@
 
 .modal-body {
 	width: 18.63em;
-	margin-top: 2.187em;
+	margin: 2.187em auto;
 }
 
 .modal-body > h1 {
-	margin-bottom: 1.875em;
+	margin-bottom: 1em;
 
-	font-family: "Inter";
-	font-style: normal;
 	font-weight: 600;
 	font-size: 1.875rem;
 	line-height: 2.25rem;
@@ -59,6 +54,20 @@
 	width: 18.63em;
 	height: 2.44em;
 	border-radius: 6.25em;
+	border: 1px solid #d9d9d9;
+	text-align: center;
+}
+
+.google-login > span,
+.apple-login > span {
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 700;
+	font-size: 0.88rem;
+	line-height: 2.44rem;
+	/* identical to box height */
+
+	color: #3f4347;
 }
 
 .stack-gap {
@@ -66,37 +75,47 @@
 }
 
 .else-break {
+	display: flex;
+	width: 18.63em;
+
 	margin-top: 0.875em;
 	margin-bottom: 0.875em;
 
-	font-family: "Inter";
-	font-style: normal;
 	font-weight: 500;
 	font-size: 1rem;
 	line-height: 1.24rem;
 
 	color: #202021;
 }
+hr {
+	flex-grow: 1;
+	height: 1px;
+	border: none;
+	background-color: #d9d9d9;
+	margin: 10px 0;
+}
+
+.else-break > span {
+	margin-left: 5px;
+	margin-right: 5px;
+}
 
 .login-email {
 	width: 18.63em;
 	height: 3.5em;
 	border-radius: 0.188em;
+	margin-bottom: 1.69em;
 
-	box-sizing: border-box;
 	border: 1px solid #d9d9d9;
 }
 
 .login-email > input {
-	width: 18.63em;
-	height: 3.5em;
+	width: 100%;
+	height: 100%;
 	border-radius: 0.188em;
-
-	box-sizing: border-box;
 	border: none;
+	background: transparent;
 
-	font-family: "Inter";
-	font-style: normal;
 	font-weight: 400;
 	font-size: 1.06rem;
 	line-height: 1.25rem;
@@ -105,30 +124,31 @@
 	color: #a9abad;
 }
 
-.next-btn,
+.next-btn {
+	width: 18.63em;
+	height: 2.25em;
+	border-radius: 6.25em;
+	background: #1e2123;
+	text-align: center;
+
+	font-weight: 700;
+	font-size: 1rem;
+	line-height: 2.25rem;
+
+	color: #ffffff;
+}
 .forgotten-password {
 	width: 18.63em;
 	height: 2.25em;
 	border-radius: 6.25em;
+	border: 1px solid #d9d9d9;
+	text-align: center;
 
-	font-family: "Inter";
-	font-style: normal;
-}
-.next-btn > p {
-	background: #3f4347;
+	background: #fff;
 
 	font-weight: 700;
 	font-size: 1rem;
-	line-height: 1.19rem;
-
-	color: #ffffff;
-}
-.forgotten-password > p {
-	border: 1px solid #d9d9d9;
-
-	font-weight: 500;
-	font-size: 0.94rem;
-	line-height: 1.13rem;
+	line-height: 2.25rem;
 
 	color: #3f4347;
 }
@@ -138,8 +158,7 @@
 }
 .f-container > h1 {
 	margin-bottom: 1.94em;
-	font-family: "Inter";
-	font-style: normal;
+
 	font-weight: 600;
 	font-size: 1.88rem;
 	line-height: 2.25rem;
@@ -148,18 +167,28 @@
 }
 
 .input-field {
-	width: 26.38em;
-	height: 3.63em;
+	width: 27.44em;
+	height: 3.85em;
 	margin-bottom: 1.56em;
 
 	box-sizing: border-box;
 	border: 1px solid #d9d9d9;
 	border-radius: 0.19em;
 }
+.disabled {
+	width: 27.44em;
+	height: 3.85em;
+	margin-bottom: 1.56em;
+
+	background: #f2f3f3;
+	box-sizing: border-box;
+	border: none;
+	border-radius: 0.19em;
+}
 .input-field > label {
-	margin-left: 0.625em;
-	font-family: "Inter";
-	font-style: normal;
+	display: inline-block;
+	margin: 0.4em 0.625em;
+
 	font-weight: 400;
 	font-size: 0.81rem;
 	line-height: 1rem;
@@ -167,9 +196,11 @@
 	color: #a9abad;
 }
 .input-field > input {
-	margin-left: 0.625em;
-	font-family: "Inter";
-	font-style: normal;
+	width: 25em;
+	margin: 0.625em;
+	border: none;
+
+	background: transparent;
 	font-weight: 400;
 	font-size: 1.06rem;
 	line-height: 1.25rem;
@@ -182,8 +213,6 @@
 	height: 9.63em;
 }
 .bitrhdate-container > h5 {
-	font-family: "Inter";
-	font-style: normal;
 	font-weight: 700;
 	font-size: 1rem;
 	line-height: 1.24rem;
@@ -193,7 +222,7 @@
 
 .date-inputs {
 	display: flex;
-	justify-content: space-between;
+	gap: 1.5em;
 	margin-top: 0.38em;
 	margin-bottom: 1.56em;
 }
@@ -201,20 +230,26 @@
 .modal-footer {
 	position: fixed;
 	width: 37.5em;
-	height: 6.25em;
-	margin-bottom: 0;
+	height: 8.5em;
+	bottom: 0;
 	border-bottom-left-radius: 0.94em;
 	border-bottom-right-radius: 0.94em;
 	background: #fff;
+}
+.lower-div {
+		height:6.25em;
+
 }
 
 .modal-footer > input {
 	width: 27.44em;
 	height: 3.19em;
+	margin: 1.56em 5.06em;
+
+	border: none;
 	border-radius: 6.25em;
 
-	font-family: "Inter";
-	font-style: normal;
+	background: #9fa1a3;
 	font-weight: 700;
 	font-size: 1rem;
 	line-height: 1.24rem;
@@ -225,30 +260,25 @@
 .options-container {
 	width: 21.75em;
 	height: 20.63em;
-	margin-left: 1.875em;
+	margin: 0.81em 1.875em;
 	border-radius: 0.94em;
 	box-sizing: border-box;
-	border: 1px solid #d9d9d9;
+	border: 1px solid #f3f2f2;
 }
-.options {
-	width: 18.63em;
-	margin: 0.69em 1.56em;
-}
-.options-header > h1 {
-	margin-bottom: 0.625em;
-	font-family: "Inter";
-	font-style: normal;
+
+.options-container > h1 {
+	margin: 0.75em 0.75em;
+
 	font-weight: 700;
 	font-size: 1.25rem;
 	line-height: 1.5rem;
 
 	color: #202021;
 }
-
-.options-header > p {
+.options-container > p {
+	margin-left: 0.75em;
 	margin-bottom: 1.25em;
-	font-family: "Inter";
-	font-style: normal;
+
 	font-weight: 400;
 	font-size: 0.84rem;
 	line-height: 1rem;
@@ -259,19 +289,17 @@
 .option-btn {
 	width: 18.63em;
 	height: 2.44em;
+	margin-left: 0.75em;
 	margin-bottom: 0.81em;
+	border-radius: 6.25em;
 	border: 1px solid #d9d9d9;
+
+	text-align: center;
 }
 .option-btn > span {
-	font-family: "Inter";
-	font-style: normal;
 	font-weight: 500;
 	font-size: 0.94rem;
-	line-height: 1.125rem;
+	line-height: 2.44em;
 
 	color: #353636;
-}
-
-.options > span {
-	margin-top: 0.44em;
 }
