--- a/network/frontend/network/src/modalsWidget.css
+++ b/network/frontend/network/src/modalsWidget.css
@@ -2,21 +2,28 @@
 	width: 6.94em;
 	height: 3.94em;
 	border-radius: 0.19em;
+	border: 1px solid #d9d9d9;
 }
-
+.year-input > select {
+	padding: 1.5em;
+}
 .month-input {
 	width: 12.56em;
 	height: 3.94em;
 	border-radius: 0.19em;
+	border: 1px solid #d9d9d9;
 }
 
 .day-input {
 	width: 5.38em;
 	height: 3.94em;
 	border-radius: 0.19em;
+	border: 1px solid #d9d9d9;
 }
 
 .date-label {
+	display: inline-block;
+	margin: 0.5em;
 	font-family: "Inter";
 	font-style: normal;
 	font-weight: 700;
