--- a/network/frontend/network/src/sidebar.css
+++ b/network/frontend/network/src/sidebar.css
@@ -1,6 +1,6 @@
 .sidebar-container {
 	height: 100vh;
-	border-right: 1px solid #d9d9d9;
+	border-right: 1px solid #f3f2f2;
 }
 .nav-container {
 	margin-top: 1.31em;
