--- a/network/frontend/network/src/sidebarElements.css
+++ b/network/frontend/network/src/sidebarElements.css
@@ -9,6 +9,14 @@
 .nav-option > .text {
 	display: inline-block;
 	vertical-align: middle;
+
+	font-family: "Inter";
+	font-style: normal;
+	font-weight: 400;
+	font-size: 1.5rem;
+	/* identical to box height */
+
+	color: #3a3a3a;
 }
 
 .tweet-btn {
