--- a/network/frontend/src/myIcons.css
+++ b/network/frontend/src/myIcons.css
@@ -1,9 +1,12 @@
 .icons {
-	margin-right: 1.25em;
+  margin-right: 1.25em;
 }
 
 .cube-logo {
-	margin-top: 1em;
-	margin-left: 3.75em;
+  margin-top: 1em;
+  margin-left: 3.75em;
 }
 
+.metric-icon {
+  margin-right: 0.5em;
+}
